[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BackGround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.266667, 0.266667, 0.266667, 1 )

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -25.0
margin_right = 75.0
margin_bottom = 25.0
text = "START GAME"

[node name="DiffButton" type="Button" parent="."]
margin_right = 150.0
margin_bottom = 50.0
text = "Hard"

[connection signal="button_up" from="StartButton" to="." method="_on_StartButton_button_up"]
[connection signal="button_up" from="DiffButton" to="." method="_on_DiffButton_button_up"]
